Fixed bug concerning calc of active tile row + col num when window is resized to a size too small to display the game board area completely

--- a/css/sudoku_online.css
+++ b/css/sudoku_online.css
@@ -67,7 +67,7 @@ body {
 }
 
 #loading_div {
-	position: absolute;
+	position: fixed;
 	width: 100%; height: 100%;
 	background-color: #FFFFFF;
 	z-index: 10;
